# telemedicine-platform

./: .gitignore  .~lock.ANTIGRAVITY_PROMPT.md#  01_roadmap_analysis.md  02_problem_context.md  03_system_architecture.md  04_low_bandwidth_telemedicine.md  05_offline_first_records.md  06_medicine_inventory.md  07_standards_abdm_fhir.md  08_security_compliance.md  09_ai_accessibility_ops.md  10_glossary.md  ANTIGRAVITY_PROMPT.md  APP_SCREENS.md  BACKEND_COMPLETION_PLAN.md  PHASE_12_PRODUCTION_ADAPTERS.md  README.md  WORKFLOW_ANALYSIS_AND_IMPROVEMENT.md  all_models_usecases.md  backend_build_phase_plan.md  backend_build_phase_plan.odt  design.md  docker-compose.yml  package-lock.json  real_world_backend_usage.md  real_world_scenarios.md  tech_stack_qa.md
backend/: .env.example  Dockerfile  alembic.ini  clear_phone_data.py  clear_reseed.py  pyproject.toml  seed.py  test_db_conn.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  database.py  redis.py  security.py
backend/app/models/: __init__.py  appointment.py  audit.py  auth.py  clinical.py  encounter.py  patient.py  pharmacy.py  practitioner.py  symptom_intake.py  sync.py
backend/app/repositories/: patient_repo.py  practitioner_repo.py
backend/app/schemas/: appointment.py  audit.py  auth.py  care_loop.py  clinical.py  encounter.py  identity.py  patient.py  pharmacy.py  practitioner.py  symptom_intake.py  sync.py
backend/app/services/: audit_service.py  auth_service.py  identity_service.py  patient_service.py  (+5 more)
backend/migrations/: env.py
backend/tests/: conftest.py
(+183 files in other folders)
