[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "boto3>=1.43.11",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.27",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "twilio>=9.10.9",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "moto>=5.2.1",
    "mypy>=2.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "types-python-jose>=3.5.0.20260408",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
